# OpenMP_Sample

./: .gitignore  CMakeLists.txt  main.cpp
